feature: add keycloak client
